# pgrx-wasi-test

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile.emsdk  Dockerfile.pythonwasmsdk  Makefile  README.md  build-native.sh  build-symlink-pgrx.sh  build.sh  init.sh  test.control  wasi-sdk.sh  wasm-sdk.sh
sdk-fix/share/wasi-sysroot/include/wasm32-wasi/: __header_sys_resource.h  __struct_sockaddr_un.h  setjmp.h  stdio.h
sdk-fix/share/wasi-sysroot/include/wasm32-wasi/bits/: alltypes.h
sdk-fix/share/wasi-sysroot/include/wasm32-wasi/sys/: mman.h  sem.h
src/: lib.rs
